--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                             <li><a class="waves-effect modal-trigger header-link" href="#search-bar-modal"><i class="material-icons left">search</i>Search</a></li>
                             <li><a class="waves-effect dropdown-button header-link" data-beloworigin="true" data-stoppropagation="true" data-hover="true" href='#' data-activates="dropdown_account"><i class="material-icons left">local_cafe</i>Account</a></li>
                             <li>
-                                <a href="#" class="header-link {% if grand_total %}cyan-text {% endif %}waves-effect">
+                                <a href="{% url 'view_cart' %}" class="header-link {% if grand_total %}cyan-text {% endif %}waves-effect">
                                     <i class="material-icons left">shopping_cart</i>
                                     {% if grand_total %}
                                         ${{ grand_total|floatformat:2 }} <span class="new badge cyan">3</span>
