--- a/products/templates/products/includes/add_to_cart_form.html
+++ b/products/templates/products/includes/add_to_cart_form.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s12">
         <h5 class="center-align cyan-text text-darken-3">Add Product to Cart</h5>
-        <form class="form" action="#" method="POST">
+        <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
             {% csrf_token %}
             <div class="row">
                 <div class="input-field col s12 grind-option-selector">
