Added add to cart functionality connecting the session storage

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -24,6 +24,7 @@
         <div class="row">
             <div class="col s12 m6">
                 {% if cart_items %}
+                    {{ cart_items }}
                 {% else %}
                 <h5>Your Cart Is Empty!</h5>
                 <p>Start adding products to your back and come back here later.</p>
