--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,6 +54,10 @@ p {
     cursor: auto;
 }
 
+.pad-10pe {
+    padding: 10%;
+}
+
 
 /* ---------- Navbar ------------ */
 
@@ -387,6 +391,12 @@ header nav {
     height: 400px;
     object-fit: cover;
 }
+
+.checkout-card {
+    width: 90%;
+    margin: 5% 5%;
+}
+
 /* ---------- Footer ------------ */
 
 footer.page-footer {
@@ -443,6 +453,10 @@ footer.page-footer {
     }
     .mobile-selector {
         display: none !important;
+    }
+    .checkout-card {
+        width: 80%;
+        margin: 0 10%;
     }
 }
 
