--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,7 +1,8 @@
 <script>
 function createSuccessToast(message){
     var toastHTML = 
-        `<div> {{message}} </div>
+        `<p class="green-text text-darken-2"><strong>Success!  -</strong></p>
+        <div> {{message}} </div>
         <button class="btn-flat toast-action" onClick="dismissToast()">Done</button>`;
     Materialize.toast(toastHTML,10000);
 }
