--- a/products/templates/products/includes/add_to_cart_form.html
+++ b/products/templates/products/includes/add_to_cart_form.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="input-field col s12">
                     <p class="option-label">How many items would you like to add?</p>
-                    <div class="row decrement-input-group mt-20">
+                    <div class="row mt-20">
                         <div class="col s4 center-align">
                             <button class="decrement-qty decrement-qty_{{ product.id }} btn" data-item_id="{{ product.id }}">
                                 <span class="material-icons change-qty-icon">remove</span>
