--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -25,14 +25,14 @@
             <div class="col s12 m8">
                 {% if cart_items %}
                 <div class="table-cart-container">
-                    <table class="striped">
+                    <table class="striped cart-table">
                         <thead>
                             <tr>
                                 <th class="cart-table-product-col-name">Product name</th>
                                 <th class="cart-table-product-col-img"></th>
-                                <th class="center-align">Number</th>
-                                <th class="center-align">Price</th>
-                                <th class="center-align">Subtotal</th>
+                                <th class="center-align update-quantity-col">Number</th>
+                                <th class="center-align price-update-col">Price</th>
+                                <th class="center-align price-update-col">Subtotal</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -56,13 +56,9 @@
                                         <img class="circle quote-img" src="{{ MEDIA_URL }}no_image_available.png" alt="Product small image">
                                     </a>
                                     {% endif %}
-                                    <!-- Update this links -->
-                                    <a class="update-link text-info pointer"><small>Update</small></a>
-                                    <a class="remove-item text-danger float-right pointer" id="remove_{{ item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
-                                    <!-- Until here -->
                                 </td>
-                                <td class="center-align">
-                                    <form class="form row update-form" method="POST" action="">
+                                <td class="center-align update-quantity-col">
+                                    <form class="form row update-form" method="POST" action="{% url 'update_cart' item.item_id %}">
                                         {% csrf_token %}
                                         <div class="input-field col s12">
                                             <div class="row">
@@ -81,10 +77,19 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <input style="display: none" type="text" name="grind" value="{{ item.grind }}">
                                     </form>
                                 </td>
-                                <td class="center-align">${{ item.product.retail_price }}</td>
-                                <td class="center-align">${{ item.product.retail_price }}</td>
+                                <td class="center-align price-update-col">
+                                    $ {{ item.product.retail_price }}
+                                    <!-- Update link -->
+                                    <p><a class="update-link pointer"><small>Update</small></a></p>
+                                </td>
+                                <td class="center-align price-update-col">
+                                    $ {{ item.product.retail_price }}
+                                    <!-- Update link -->
+                                    <p><a class="remove-item pointer" id="remove_{{ item.item_id }}" data-grind="{{ item.grind }}"><small>Remove</small></a></p>
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -221,7 +226,7 @@
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form');
+        var form = $(this).closest('tr').find('.update-form');
         form.submit();
     })
 
@@ -229,9 +234,9 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+        var grind = $(this).data('grind');
+        var url = `/cart/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'grind': grind};
 
         $.post(url, data)
          .done(function() {
