--- a/products/templates/products/includes/product_detail_script.html
+++ b/products/templates/products/includes/product_detail_script.html
@@ -27,7 +27,7 @@
     // Increment quantity input
     $('.increment-qty').click(function(e) {
        e.preventDefault();
-       var closestInput = $(this).closest('.input-field').find('.qty_input')[0];
+       var closestInput = $(this).closest('tr').find('.qty_input')[0];
        var currentValue = parseInt($(closestInput).val());
        $(closestInput).val(currentValue + 1);
        var itemId = $(this).data('item_id');
@@ -37,7 +37,7 @@
     // Decrement quantity input
     $('.decrement-qty').click(function(e) {
        e.preventDefault();
-       var closestInput = $(this).closest('.input-field').find('.qty_input')[0];
+       var closestInput = $(this).closest('tr').find('.qty_input')[0];
        var currentValue = parseInt($(closestInput).val());
        $(closestInput).val(currentValue - 1);
        var itemId = $(this).data('item_id');
