removing items from cart functionality, bug fixed

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -236,10 +236,9 @@
         var itemId = $(this).attr('id').split('remove_')[1];
         var grind = $(this).data('grind');
         var url = `/cart/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken/': csrfToken, 'grind': grind};
+        var data = {'csrfmiddlewaretoken': csrfToken, 'grind': grind};
 
-        $.post(url, data)
-         .done(function() {
+        $.post(url, data).done(function() {
              location.reload();
          });
     })
